# bucketlens

./: .gitignore  CHANGELOG.md  CLAUDE.md  HANDOFF.md  HANDOFF_SESSION_LOG.md  MANIFEST.in  Makefile  README.md  REMEMBER.md  app.py  pyproject.toml  requirements.txt
bucketlens/: app.py  audit.py  cli.py
bucketlens/providers/: aws.py  azure.py  gcp.py
providers/: aws.py  azure.py
static/: app.js  style.css
templates/: index.html
website/: 403.html  contact.html  deploy.html  error.html  features.html  index.html
